--- a/bitwise.ipynb
+++ b/bitwise.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
     "|---|---|---|---|---|---|---|---|---|---|\n",
     "| 0 | 0 | 0 | 1 | 1 | 1 | 1 | 1 |  |  | \n",
     "| 0 | 1 | 1 | 1 | 0 | 1 | 0 | 1 | -> | u |\n",
-    "| F | S | S | F | S| F | S | F | "
+    "| F | S | S | F | S| F | S | F | ||"
    ]
   },
   {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -400,9 +400,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encrypted data is [39, 13, 10, 1, 69, 29, 0, 69, 2, 82, 22, 17, 16, 23, 6, 6, 69, 25, 22, 22, 16, 19, 2, 17]\n",
+      "This is a secret message\n"
+     ]
+    }
+   ],
    "source": [
     "from getpass import getpass \n",
     "\n",
@@ -447,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -611,14 +620,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "01011001\n"
      ]
     }
    ],
