--- a/bitwise.ipynb
+++ b/bitwise.ipynb
@@ -530,7 +530,7 @@
     "|---|---|---|---|---|---|---|---|\n",
     "| 0 | 1 | 0 | 0 | 0 | 1 | 0 | 1 |\n",
     "\n",
-    "och ckiftar den ett steg åt höger så kommer vi att få \n",
+    "och skiftar den ett steg åt höger så kommer vi att få \n",
     "\n",
     "\n",
     "| -128 | 64 | 32 | 16 | 8 | 4 | 2 | 1 | \n",
